--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<script src="myscript.js" type="text/javascript"></script>
 </head>
-<body onload="locateMe(); checkCookie(1);">
+<body onload="locateMe(); checkcurrentlevel()">
 <!--Auto open The Modal-->
 
 <!-- The Modal -->
